Recommendation updates automatically based on the WashingMachineDetail